--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: ${MONGODB_URI}  # Railway will provide this
+      uri: ${MONGO_URL}  # Railway will provide this
       auto-index-creation: false
 
 jwt:
