--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,4 +1,9 @@
 spring:
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 50MB
+      max-request-size: 50MB
   data:
     mongodb:
       uri: mongodb://mongo:OhHtyGoHkgiHjtOvwcuaSEJGeUmJYXEs@mongodb.railway.internal:27017/blog  # Railway will provide this
