--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,7 +6,7 @@ spring:
       max-request-size: 50MB
   data:
     mongodb:
-      uri: mongodb://mongo:OhHtyGoHkgiHjtOvwcuaSEJGeUmJYXEs@autorack.proxy.rlwy.net:37168/blog?ssl=true
+      uri: mongodb://mongo:OhHtyGoHkgiHjtOvwcuaSEJGeUmJYXEs@mongodb.railway.internal:27017/blog?ssl=true&retryWrites=true
       auto-index-creation: false
 
 jwt:
