--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,6 +7,8 @@ spring:
   data:
     mongodb:
       uri: ${MONGO_URL}/blog
+      database: blog
+      authentication-database: admin
       auto-index-creation: false
 
 jwt:
